# sport_analytics

./: .gitignore  0623.ipynb  Dockerfile  build_vector_db.py  main.py  pyproject.toml
app/: app.py  build_vector_db.py  config.py  database.py
app/models/: __init__.py  announcement.py  attendance.py  evaluation.py  food_photo.py  sleep_record.py  stress_evaluate.py  task.py  training.py  user.py
app/routes/: __init__.py  admin.py  athlete.py  auth.py  chat.py  coach.py  evaluation.py  food.py  line_bot.py  main.py  profile.py  stress_evaluate.py  training.py  voice.py
app/templates/: base.html  index.html
migrations/versions/: 0d2bc0741637_add_food_photos_table.py  119ae06c1acb_revised_to_user_relation.py  1ba1f16e633d_更改training表.py  3401c0c4bd1f_create_tasks_table.py  37a94b9cf652_add_announcement_model.py  5c117367ee22_create_tasks_table.py  5c30f293e960_add_bio_and_profile_pic_to_user.py  5def54358b5f_extend_password_field_length.py  687e2752aaf0_revised_to_tasks.py  88c9d5b40888_initial_migration.py  8aeeebd3a5ea_initial_migration.py  8b93e32464d4_add_completed_at_to_tasks.py  ab25749dd185_revised_to_user_relation.py  ac0ffc3d255b_add_athlete_username_to_food_photos.py  bffcf3219ff9_create_attendance_table.py  c93aa37f1779_add_profile_fields_to_user.py  ca3813ec9694_add_line_user_id_column_to_user_table.py  d32a39c09f71_reset_base_migration.py  d86936dd581b_message_describing_changes.py  d9887e1a8c94_add_food_photos_table.py  fd7658e7aa1f_add_user_id_to_training_tasks.py  fe4406d51029_merge_heads.py
static/: manifest.json  service-worker.js
(+35 files in other folders)
